--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -25,7 +25,7 @@
   "explorer.confirmDelete": false,
   "files.insertFinalNewline": true,
   "files.eol": "\n",
-  "files.autoSave": "onFocusChange",
+  "files.autoSave": "onWindowChange",
   "files.exclude": {
     "**/node_modules": false,
     "**/.git": false,
