Settings and functions update

--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -77,5 +77,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "todo-tree.tree.showScanModeButton": false
+  "todo-tree.tree.showScanModeButton": false,
+  "terminal.integrated.shell.linux": "/bin/zsh"
 }
