--- a/live-files/config
+++ b/live-files/config
@@ -15,5 +15,7 @@
 [profiles]
   [[default]]
     cursor_color = "#aaaaaa"
+    font = MesloLGS NF 10
+    use_system_font = False
   [[Profile1]]
     cursor_color = "#aaaaaa"
