--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -42,7 +42,6 @@
     "activityBarBadge.background": "#FF0000"
   },
   // Extensions Settings
-  "bracketPairColorizer.showHorizontalScopeLine": true,
   "breadcrumbs.enabled": true,
   "docBlocker.Author": "danilofeijo",
   "docBlocker.defaultTpl": "/** \n * @Author: {{author}} \n * @Date: {{createTime}} \n * @Desc: $0 \n */",
@@ -77,6 +76,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "todo-tree.tree.showScanModeButton": false,
-  "terminal.integrated.shell.linux": "/bin/zsh"
+  "terminal.integrated.shell.linux": "/bin/zsh",
+  "javascript.updateImportsOnFileMove.enabled": "always"
 }
