--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -8,6 +8,8 @@
   "editor.tabSize": 2,
   "editor.fontSize": 14,
   "editor.formatOnType": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": false,
   "editor.lineNumbers": "on",
   "editor.lineHeight": 20,
   "editor.selectionHighlight": true,
@@ -30,10 +32,11 @@
     "**/node_modules": false,
     "**/.git": false
   },
-  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "terminal.integrated.defaultProfile.windows": "bash",
   "terminal.integrated.fontSize": 12,
-  "window.zoomLevel": 0,
-  "window.menuBarVisibility": "default",
+  "terminal.integrated.tabs.enabled": false,
+  "window.menuBarVisibility": "classic",
   "workbench.sideBar.location": "left",
   "workbench.activityBar.visible": true,
   "workbench.colorTheme": "Dracula",
@@ -42,21 +45,23 @@
     "activityBarBadge.background": "#FF0000"
   },
   // Extensions Settings
+  "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+  
   "breadcrumbs.enabled": true,
+  "diffEditor.ignoreTrimWhitespace": false,
   "docBlocker.Author": "danilofeijo",
   "docBlocker.defaultTpl": "/** \n * @Author: {{author}} \n * @Date: {{createTime}} \n * @Desc: $0 \n */",
-  "gitlens.views.fileHistory.enabled": true,
-  "gitlens.views.lineHistory.enabled": true,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "open-in-browser.default": "chrome",
+  "prettier.requireConfig": true,
+  "git.autofetch": true,
   "gitlens.advanced.messages": {
     "suppressCommitHasNoPreviousCommitWarning": false,
     "suppressCommitNotFoundWarning": false,
     "suppressFileNotUnderSourceControlWarning": false,
     "suppressGitVersionWarning": false,
     "suppressLineUncommittedWarning": false,
-    "suppressNoRepositoryWarning": false,
-    "suppressResultsExplorerNotice": false,
-    "gitlens.keymap": "none",
-                            "suppressShowKeyBindingsNotice": true
+    "suppressNoRepositoryWarning": false
   },
   "indentRainbow.colors": [
     "rgba(16,16,16,0.1)",
@@ -66,16 +71,51 @@
     "rgba(16,16,16,0.6)",
     "rgba(16,16,16,0.3)"
   ],
-  "liveshare.featureSet": "insiders",
-  "git.autofetch": true,
-  "gitlens.hovers.currentLine.over": "line",
-  "open-in-browser.default": "chrome",
+  "sonarlint.connectedMode.connections.sonarqube": [
+    { "serverUrl": "https://sonarqube.mycompany.com", "token": "<generated from SonarQube account/security page>" },
+  ],
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "terminal.integrated.shell.linux": "/bin/zsh",
-  "javascript.updateImportsOnFileMove.enabled": "always"
+  "cSpell.allowCompoundWords": true,
+  "cSpell.language": "en,pt,pt_BR",
+  "cSpell.logLevel": "Information",
+  "cSpell.userWords": [
+    "Administracao",
+    "aplicacao",
+    "bambole",
+    "botao",
+    "ceit",
+    "Chainer",
+    "CICD",
+    "CODIGO",
+    "Criacao",
+    "Edicao",
+    "mkdir",
+    "mochawesome",
+    "noreply",
+    "runqa",
+    "stefanoeb",
+    "testid",
+    "udemy",
+    "unstage",
+    "usuario",
+    "Usuarios",
+    "Utdv"
+  ],
+  "todo-tree.general.tags": [
+    "BUG",
+    "HACK",
+    "FIXME",
+    "TODO",
+    "XXX",
+    "[ ]",
+    "[x]"
+  ]
 }
