--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -4,6 +4,8 @@
 // Place your settings in this file to overwrite default and user settings.work
 {
   // VSCode Settings
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": "active",
   "editor.rulers": [0],
   "editor.tabSize": 2,
   "editor.fontSize": 14,
