--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -72,7 +72,7 @@
     "rgba(16,16,16,0.3)"
   ],
   "sonarlint.connectedMode.connections.sonarqube": [
-    { "serverUrl": "https://sonarqube.mycompany.com", "token": "<generated from SonarQube account/security page>" },
+    { "serverUrl": "https://sonarqube.mycompany.com", "token": "<generated from SonarQube account/security page>" }
   ],
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -107,10 +107,13 @@
     "CODIGO",
     "Criacao",
     "Edicao",
+    "esbenp",
     "mkdir",
     "mochawesome",
     "noreply",
+    "rgba",
     "runqa",
+    "sonarqube",
     "stefanoeb",
     "testid",
     "udemy",
