--- a/live-files/settings.json
+++ b/live-files/settings.json
@@ -19,7 +19,11 @@
   "editor.occurrencesHighlight": false,
   "editor.renderWhitespace": "boundary",
   "editor.minimap.enabled": false,
-  "editor.quickSuggestions": true,
+  "editor.quickSuggestions": {
+    "comments": "on",
+    "strings": "on",
+    "other": "on"
+  },
   "editor.wordBasedSuggestions": false,
   "editor.suggestSelection": "first",
   "editor.renderControlCharacters": true,
@@ -73,7 +77,10 @@
     "rgba(16,16,16,0.3)"
   ],
   "sonarlint.connectedMode.connections.sonarqube": [
-    { "serverUrl": "https://sonarqube.mycompany.com", "token": "<generated from SonarQube account/security page>" }
+    {
+      "serverUrl": "https://sonarqube.mycompany.com",
+      "token": "<generated from SonarQube account/security page>"
+    }
   ],
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -120,6 +127,7 @@
     "udemy",
     "unstage",
     "usuario",
+    "usuarios",
     "Usuarios",
     "Utdv"
   ]
