Updated flameshot config file

--- a/static-files/flameshot.conf
+++ b/static-files/flameshot.conf
@@ -1,11 +1,10 @@
 [General]
-buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\b\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x6\0\0\0\xf\0\0\0\b\0\0\0\n\0\0\0\v)
-contastUiColor="@Variant(\0\0\0\x43\x2\xff\xffv6\xf5\a\xb0,\0\0)"
+buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\t\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x6\0\0\0\x12\0\0\0\xf\0\0\0\x13\0\0\0\b\0\0\0\v)
 contrastOpacity=191
 disabledTrayIcon=false
-drawColor=@Variant(\0\0\0\x43\x1\xff\xff\0\0\x80\x80\0\0\0\0)
 drawThickness=5
-filenamePattern=newPrint-D%Y%m%d-T%H%M%S
-savePath=/home/danilofs/Downloads
+filenamePattern=print-%F-%H%M%S
+saveAsFileExtension=png
+savePath=/home/danilo.feijo/Downloads
 showDesktopNotification=false
-uiColor=@Variant(\0\0\0\x43\x2\xff\xff\x43\xf1\xff\xff\xa3\x38\0\0)
+uiColor=#00961f
